Update URL and delay time

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
   <head>
-    <meta http-equiv="refresh" content="delay_time; URL=./HTML&CSS/index.html"/>
+    <meta http-equiv="refresh" content="0; URL='HTML&CSS/index.html'"/>
   </head>
 </html>
