Update project links to use capital letters

--- a/HTML&CSS/Projects.html
+++ b/HTML&CSS/Projects.html
@@ -59,7 +59,7 @@
 	      <div class="row">
 		<div class="col-lg-7"></div>
 		<div class="col-lg-5">
-		  <a href="cerne.html">
+		  <a href="Cerne.html">
 		    <div id="cerne" style="width:100%;background-size:cover;background-position:center;">
 		      <img src="../IMAGES/PROJECTS/GRAPHIC DESIGN/CERNE (2024)/001.png" style="width:100%;opacity:0;" class="card-image">
 
@@ -78,7 +78,7 @@
 
 	      <div class="row" style="margin-top:-12rem;">
 		<div class="col-lg-6">
-		  <a href="riot.html">
+		  <a href="Riot.html">
 		    <div id="riot" style="width:100%;background-size:cover;background-position:center;">
 		      <img src="../IMAGES/PROJECTS/GRAPHIC DESIGN/RIOT FEST (2022)/02.gif" style="width:100%;opacity:0;" class="card-image">
 		    </div>
@@ -96,7 +96,7 @@
 	      <div class="row" style="margin-top:-12rem;">
 		<div class="col-lg-7"></div>
 		<div class="col-lg-5">
-		  <a href="cream.html">
+		  <a href="Cream.html">
 		    <div id="cream" style="width:100%;background-size:cover;background-position:center;">
 		      <img src="../IMAGES/PROJECTS/GRAPHIC DESIGN/CREAM (2022)/013.jpg" style="width:100%;opacity:0;" class="card-image">
 
@@ -111,7 +111,7 @@
 
 	      <div class="row" style="margin-top:-12rem;">
 		<div class="col-lg-6">
-		  <a href="extruplas.html">
+		  <a href="Extruplas.html">
 		    <div id="extruplas" style="width:100%;background-size:cover;background-position:center;">
 		      <img src="../IMAGES/PROJECTS/GRAPHIC DESIGN/EXTRUPLAS (2020)/01.jpg" style="width:100%;opacity:0;" class="card-image">
 
