Update for phone screens

--- a/HTML&CSS/Cream.html
+++ b/HTML&CSS/Cream.html
@@ -22,17 +22,13 @@
     </header>
     <main class="project">
       <img class="background-image-fadein" src="../IMAGES/PROJECTS/GRAPHIC DESIGN/CREAM (2022)/013.jpg"/>
-      <div style="height:100%;"></div>
       <div class="container-fluid project-content">
 	<section class="project-description">
 
 	  <div class="row">
-	    <div class="col-lg-6 project-data">
-	      Cream
-	    </div>
-	    <div class="col-lg-6 project-data" style="text-align:right;">
-(Visual Identity)
-<br/>
+	    <div class="col-lg-12 project-data">
+	      <p style="float:left;"> Cream </p>
+	      <p style="float:right;">(Visual Identity)</p>
 	    </div>
 	    <div class="col-lg-12">
 Cream is a clothing brand founded in 2004 that celebrates femininity and embodies a chic signature style with a Scandinavian touch. Renowned for its distinctive bohemian look, Cream captures a unique blend of timeless elegance and contemporary trends.<br/>
