--- a/HTML&CSS/Extruplas.html
+++ b/HTML&CSS/Extruplas.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" media="all" href="Style.css">
   </head>
   <body>
-    <header>
+    <header style="color:white;">
       <div class="logo"><a href="index.html">DIOGO DANTAS</a></div>
       <nav>
 	<ul>
@@ -22,16 +22,12 @@
     </header>
     <main class="project">
       <img class="background-image-fadein" src="../IMAGES/PROJECTS/GRAPHIC DESIGN/EXTRUPLAS (2020)/01.jpg"/>
-      <div style="height:100%;"></div>
       <div class="container-fluid project-content">
 	<section class="project-description">
 <div class="row">
-	    <div class="col-lg-6 project-data">
-	      Extruplás
-	    </div>
-	    <div class="col-lg-6 project-data" style="text-align:right;">
-(Industrial & Product Design)
-<br/>
+	    <div class="col-lg-12 project-data">
+	      <p style="float:left;"> Extruplás </p>
+	      <p style="float:right;">(Industrial & Product Design)</p>
 	    </div>
 	    <div class="col-lg-12">
 Extruplás is a pioneering company addressing the disposal of mixed plastics in Portugal, redirecting them away from landfills. Specialized in recycling, collecting, and recovering plastic, the company transforms these materials into urban furniture made entirely from recycled plastic and avoiding consuming natural resources like wood.<br/><br/>Designed for a school’s patio, we had the pleasure to partner with Extruplás on a collaborative project to design benches using their recycled plastic materials. The goal was to create an innovative design with versatile functionality, considering the right angles for a comfortable backrest. The resulting solution is a modular bench with dual usability—either vertically or horizontally. Users can set it up as they wish. The bench incorporates 10 recycled strips, and the structural components are crafted from metal.
