--- a/HTML&CSS/Projects.html
+++ b/HTML&CSS/Projects.html
@@ -33,6 +33,11 @@
 	#extruplas:hover {
 	    background:url('../IMAGES/PROJECTS/GRAPHIC DESIGN/EXTRUPLAS (2020)/06.png') no-repeat; 
 	}
+	@media only screen and (min-width: 992px) {
+  	  move-up-row {
+	    margin-top:-12rem;
+	  }
+	}
     </style>
   </head>
   <body class="projects">
@@ -76,7 +81,7 @@
 		</div>
 	      </div>
 
-	      <div class="row" style="margin-top:-12rem;">
+	      <div class="row move-up-row">
 		<div class="col-lg-6">
 		  <a href="Riot.html">
 		    <div id="riot" style="width:100%;background-size:cover;background-position:center;">
@@ -93,7 +98,7 @@
 		<div class="col-lg-6"></div>
 	      </div>
 
-	      <div class="row" style="margin-top:-12rem;">
+	      <div class="row move-up-row">
 		<div class="col-lg-7"></div>
 		<div class="col-lg-5">
 		  <a href="Cream.html">
@@ -109,7 +114,7 @@
 		</div>
 	      </div>
 
-	      <div class="row" style="margin-top:-12rem;">
+	      <div class="row move-up-row">
 		<div class="col-lg-6">
 		  <a href="Extruplas.html">
 		    <div id="extruplas" style="width:100%;background-size:cover;background-position:center;">
