--- a/HTML&CSS/Riot.html
+++ b/HTML&CSS/Riot.html
@@ -22,17 +22,13 @@
     </header>
     <main class="project">
       <img class="background-image-fadein" src="../IMAGES/PROJECTS/GRAPHIC DESIGN/RIOT FEST (2022)/02.gif"/>
-      <div style="height:100%;"></div>
       <div class="container-fluid project-content">
 	<section class="project-description">
 
 	  <div class="row">
-	    <div class="col-lg-6 project-data">
-	      Riot Fest
-	    </div>
-	    <div class="col-lg-6 project-data" style="text-align:right;">
-(Visual Identity & Communication)
-<br/>
+	    <div class="col-lg-12 project-data">
+	      <p style="float:left;">Riot Fest</p>
+	      <p style="float:right;">(Visual Identity & Communication)</p>
 	    </div>
 	    <div class="col-lg-12">
 Riot Fest is a groundbreaking, multi-genre festival designed to disrupt the ‘quiet’ with its diverse crowd and artist lineup. Set to unfold at Refshaleøen in Copenhagen, this open-air festival features a huge range of genres, going from R&B and Neo Soul to Hip Hop and AfroPop, creating an energetic and inclusive atmosphere.<br/>
