--- a/HTML&CSS/index.html
+++ b/HTML&CSS/index.html
@@ -21,9 +21,6 @@
       </nav>
     </header>
     <main>
-	<div class="home-image">
-	  <img src="../IMAGES/landing-page.gif"/>
-	</div>
-	
+      <img src="../IMAGES/landing-page.gif" class="home-image"/>
     </main>
   </body>
