--- a/HTML&CSS/Cerne.html
+++ b/HTML&CSS/Cerne.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" media="all" href="Style.css">
   </head>
   <body>
-    <header>
+    <header style="color:white;">
       <div class="logo"><a href="index.html">DIOGO DANTAS</a></div>
       <nav>
 	<ul>
@@ -22,16 +22,12 @@
     </header>
     <main class="project">
       <img class="background-image-fadein" src="../IMAGES/PROJECTS/GRAPHIC DESIGN/CERNE (2024)/001.png"/>
-      <div style="height:100%;"></div>
       <div class="container-fluid project-content">
 	<section class="project-description">
 	  <div class="row">
-	    <div class="col-lg-6 project-data">
-	      Cerne Jewellery
-	    </div>
-	    <div class="col-lg-6 project-data" style="text-align:right;">
-(Visual Identity)
-<br/>
+	    <div class="col-lg-12 project-data">
+	      <p style="float:left;">Cerne Jewellery</p>
+	      <p style="float:right;">(Visual Identity)</p>
 	    </div>
 	    <div class="col-lg-12">
 Cerne emerged unexpectedly from a collaboration between two friends. Originally conceptualized as a hypothetical identity case, the project evolved into Margarida’s dream of starting her own jewellery business. The venture organically expanded, with a growing team working on shaping its identity and bringing the brand to life.<br/><br/>Positioned as an online business, Cerne embodies artisanal craftsmanship and a commitment to sustainability. With a distinctive blend of personality, playfulness, and audacity, it functions as an authorial and contemporary brand redefining the role of jewellery, elevating it from a mere accessory into a signature piece. The final identity encapsulates the bold and deliberately unfinished yet refined aesthetic of its jewels.
