--- a/HTML&CSS/Cerne.html
+++ b/HTML&CSS/Cerne.html
@@ -21,7 +21,7 @@
       </nav>
     </header>
     <main class="project">
-      <img class="background-image-fadein" src="../IMAGES/PROJECTS/GRAPHIC DESIGN/CERNE (2024)/001.png"/>
+      <img class="background-image-fadein" src="../IMAGES/PROJECTS/GRAPHIC DESIGN/CERNE (2024)/014.jpg"/>
       <div class="container-fluid project-content">
 	<section class="project-description">
 	  <div class="row">
@@ -74,16 +74,6 @@ Academic Project
 	  </div>
           <div class="row">
 	    <div class="col-lg-10">
-	      <img loading="lazy" src="../IMAGES/PROJECTS/GRAPHIC DESIGN/CERNE (2024)/05.jpg">
-	    </div>
-	  </div>
-          <div class="row">
-	    <div class="col-lg-10">
-	      <img loading="lazy" src="../IMAGES/PROJECTS/GRAPHIC DESIGN/CERNE (2024)/09.jpg">
-	    </div>
-          </div>
-          <div class="row">
-            <div class="col-lg-10">
 	      <img loading="lazy" src="../IMAGES/PROJECTS/GRAPHIC DESIGN/CERNE (2024)/05.jpg">
 	    </div>
 	  </div>
