--- a/HTML&CSS/Cream.html
+++ b/HTML&CSS/Cream.html
@@ -63,33 +63,31 @@ Cream is a clothing brand founded in 2004 that celebrates femininity and embodie
 	</section>
 	<section class="showroom">
 	  <div class="row">
-	    <div class="col-lg-5">
-	      <img src="../IMAGES/PROJECTS/GRAPHIC DESIGN/CREAM (2022)/07.gif">
-	    </div>
-	    <div class="col-lg-5">
-	      <img src="../IMAGES/PROJECTS/GRAPHIC DESIGN/CREAM (2022)/08.png">
+	    <div class="col-lg-10">
+	      <img src="../IMAGES/PROJECTS/GRAPHIC DESIGN/CREAM (2022)/F8.gif">
 	    </div>
 	  </div>
           <div class="row">
 	    <div class="col-lg-10">
-	      <img src="../IMAGES/PROJECTS/GRAPHIC DESIGN/CREAM (2022)/014.jpg">
+	      <img src="../IMAGES/PROJECTS/GRAPHIC DESIGN/CREAM (2022)/F4.jpg">
 	    </div>
-          <div class="row">
 	  </div>
+          <div class="row">
 	    <div class="col-lg-10">
 	      <img src="../IMAGES/PROJECTS/GRAPHIC DESIGN/CREAM (2022)/011.jpg">
 	    </div>
-          <div class="row">
 	  </div>
+          <div class="row">
 	    <div class="col-lg-10">
 	      <img src="../IMAGES/PROJECTS/GRAPHIC DESIGN/CREAM (2022)/012.jpg">
             </div>
-          <div class="row">
 	  </div>
+          <div class="row">
 	    <div class="col-lg-10">
 	      <img src="../IMAGES/PROJECTS/GRAPHIC DESIGN/CREAM (2022)/06.gif">
 	    </div>
 	  </div>
+	</section>
       </div>
     </main>
   </body>
