--- a/HTML&CSS/Extruplas.html
+++ b/HTML&CSS/Extruplas.html
@@ -21,7 +21,7 @@
       </nav>
     </header>
     <main class="project">
-      <img class="background-image-fadein" src="../IMAGES/PROJECTS/GRAPHIC DESIGN/EXTRUPLAS (2020)/01.jpg"/>
+      <img class="background-image-fadein" src="../IMAGES/PROJECTS/GRAPHIC DESIGN/EXTRUPLAS (2020)/01.png"/>
       <div class="container-fluid project-content">
 	<section class="project-description">
 <div class="row">
@@ -70,6 +70,8 @@ Extruplás is a pioneering company addressing the disposal of mixed plastics in 
 	    <div class="col-lg-10">
 	      <img loading="lazy" src="../IMAGES/PROJECTS/GRAPHIC DESIGN/EXTRUPLAS (2020)/03.jpg">
 	    </div>
+	  </div>
+	  <div class="row">
             <div class="col-lg-10">
 	      <img loading="lazy" src="../IMAGES/PROJECTS/GRAPHIC DESIGN/EXTRUPLAS (2020)/04.jpg">
 	    </div>
