--- a/HTML&CSS/Projects.html
+++ b/HTML&CSS/Projects.html
@@ -28,13 +28,13 @@
 	    background:url('../IMAGES/PROJECTS/GRAPHIC DESIGN/CREAM (2022)/F4.jpg') no-repeat; 
 	}
 	#extruplas {
-	    background:url('../IMAGES/PROJECTS/GRAPHIC DESIGN/EXTRUPLAS (2020)/01.jpg') no-repeat; 
+	    background:url('../IMAGES/PROJECTS/GRAPHIC DESIGN/EXTRUPLAS (2020)/01.png') no-repeat; 
 	}
 	#extruplas:hover {
 	    background:url('../IMAGES/PROJECTS/GRAPHIC DESIGN/EXTRUPLAS (2020)/06.png') no-repeat; 
 	}
-	@media only screen and (min-width: 992px) {
-  	  move-up-row {
+	@media (min-width: 992px) {
+  	  .move-up-row {
 	    margin-top:-12rem;
 	  }
 	}
@@ -118,7 +118,7 @@
 		<div class="col-lg-6">
 		  <a href="Extruplas.html">
 		    <div id="extruplas" style="width:100%;background-size:cover;background-position:center;">
-		      <img src="../IMAGES/PROJECTS/GRAPHIC DESIGN/EXTRUPLAS (2020)/01.jpg" style="width:100%;opacity:0;" class="card-image">
+		      <img src="../IMAGES/PROJECTS/GRAPHIC DESIGN/EXTRUPLAS (2020)/01.png" style="width:100%;opacity:0;" class="card-image">
 
 		    </div>
 		  <div class="card-title">Extruplás</div>
