--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; URL='https://diogo28dantas.github.io/diogo28dantas/HTML&CSS/index.html'"/>
+    <meta http-equiv="refresh" content="0; URL='https://www.diogo-dantas.com/HTML&CSS/index.html'"/>
   </head>
 </html>
