Add favicon everywhere, fix text sizes on mobile

--- a/HTML&CSS/Cerne.html
+++ b/HTML&CSS/Cerne.html
@@ -1,7 +1,9 @@
 <html>
   <head>
+    <link rel="icon" type="image/x-icon" href="../IMAGES/thumbnail.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.0/css/bootstrap-grid.min.css" integrity="sha512-vWtGaoxGWtwzJnP6e3YbBCE2BAEbldcuL4TVO3IbW/IFocN/XxuBv3Fuqm7t+I4eZ7p8L9iBElSUqXQUbQmarA==" crossorigin="anonymous" referrerpolicy="no-referrer">
     <link rel="stylesheet" media="all" href="Style.css">
+
   </head>
   <body>
     <header style="color:white;">
