--- a/HTML&CSS/Foraeldre.html
+++ b/HTML&CSS/Foraeldre.html
@@ -15,40 +15,52 @@
     <main class="project">
       <div class="container-fluid project-content">
         <div class="project-image-container">
-          <img class="background-image-fadein" src="../IMAGES/PROJECTS/GRAPHIC DESIGN/CERNE (2024)/014.jpg"/>
-        </div>
+          <img class="background-image-fadein" src="../IMAGES/PROJECTS/GRAPHIC DESIGN/FORAELDRE (2025)/1.jpg"/>
+	</div>
 	<section class="project-description">
 	  <div class="row project-data">
-	    <div class="col-lg-4">Cerne Jewelry</div>
-	    <div class="col-lg-4">( Visual Identity & Naming )</div>
-	    <div class="col-lg-4">2024</div>
+	    <div class="col-lg-4">Forældre</div>
+	    <div class="col-lg-4">( Visual Identity & Title Design )</div>
+	    <div class="col-lg-4">2024—2025</div>
 	  </div>
 	  <div class="row">
 	    <div class="col-lg-12">
-Cerne emerged from a collaboration between two friends, evolving from a hypothetical
-identity case into a fully realized independent brand. Developed through a strategic
-process, I designed the complete visual identity and led the brand strategy, shaping its
-positioning and playing a key role in defining its name.<br/><br/>
-Grounded in artisanal craftsmanship and sustainability, Cerne balances personality,
-playfulness, and audacity—redefining jewelry as more than an accessory, but as a
-signature piece. The final identity captures the bold, deliberately unfinished yet refined
-aesthetic of its jewels. Previously based in Copenhagen, Cerne is now entering a new
-phase as its founder, Margarida, establishes a studio space in Lisbon, preparing to
-launch the business in a new setting.
+
+Forældre is a sentimental short film that follows Noah, a man caring for his father
+suffering from dementia, as he faces unresolved grief at his ex-girlfriend’s wedding. The
+film delves into themes of memory, loss, and the complexity of human connection, as
+Noah navigates his past and lost relationships.
+<br/><br/>
+For this project, I was tasked with shaping the film’s visual identity, from subtitles and
+credits to title graphics and poster assets. The director envisioned a raw, unfiltered
+aesthetic that would capture the film’s reflective, intimate tone, and I made sure each
+graphic element aligned with this concept. Guided by the mantra, ‘what you see is
+what you get,’ I focused on creating visuals that enhanced the film's naturalistic style,
+maintaining emotional depth and authenticity.
 
 
-	<div class="project-data-footer">
-
+<div class="project-data-footer">
 	  <div class="row" style="text-align:center;">
-	    <div class="col-lg-12">
-  		  Academic project <br/>
-		  Jewelry by
-  	    <a href="https://www.instagram.com/magz_______/"
-	    target="_blank" class="grey">MARGARIDA COSTA<sup></a>
+	    <div class="col-lg-3">
+  		  Jonas Lajboschitz <sup>( director )</sup> <br/>
+  		  Mathilde Kirstein <sup>( producer )</sup> <br/>
+
+	    </div>
+	    <div class="col-lg-3">
+  		  Isaac <sup>( production company )</sup> <br/>
+  		  Christian Karlsen <sup>( director of photography )</sup> <br/>
+	    </div>
+	    <div class="col-lg-3">
+  		  Cecilie Damsgaard <sup>( editor )</sup> <br/>
+  		  Mathias Schmidt <sup>( sound designer )</sup> <br/>
+	    </div>
+	    <div class="col-lg-3">
+  		  Diogo Dantas <sup>( graphic designer )</sup> <br/>
+  		  Adrian Cadan <sup>( poster art )</sup> <br/>
 	    </div>
 	  </div>
-	</div>
-
+<br/>
+</div>
 
 	    </div>
 	  </div>
