--- a/HTML&CSS/Cream.html
+++ b/HTML&CSS/Cream.html
@@ -6,76 +6,63 @@
   </head>
   <body>
     <header>
-      <div class="logo"><a href="index.html">DIOGO DANTAS</a></div>
-      <nav>
-	<ul>
-	  <li>
-            <a href="Projects.html">Design</a>
-	  </li>
-	  <li>
-            <a href="Artwork.html">Artwork</a>
-	  </li>
-	  <li>
-            <a href="About.html">About</a>
-	  </li>
-	</ul>
-      </nav>
+      <div class="col-lg-4"> <a href="index.html">DD </a></div>
+      <div class="col-lg-4"> 
+	<a href="Work.html">WORK</a>/<a href="Archive.html">ARCHIVE</a></div>
+      <div class="col-lg-4"> <a href="About.html">ABOUT </a></div>
     </header>
     <main class="project">
-      <img class="background-image-fadein" src="../IMAGES/PROJECTS/GRAPHIC DESIGN/CREAM (2022)/013.jpg"/>
       <div class="container-fluid project-content">
+        <div class="project-image-container">
+          <img class="background-image-fadein" src="../IMAGES/PROJECTS/GRAPHIC DESIGN/CREAM (2022)/011.jpg"/>
+        </div>
 	<section class="project-description">
-
+	  <div class="row project-data">
+	    <div class="col-lg-4">Cream</div>
+	    <div class="col-lg-4">( Identity & Art Direction )</div>
+	    <div class="col-lg-4">2022</div>
+	  </div>
 	  <div class="row">
-	    <div class="col-lg-12 project-data">
-	      <p style="float:left;"> Cream </p>
-	      <p style="float:right;">(Visual Identity)</p>
-	    </div>
 	    <div class="col-lg-12">
-Cream is a clothing brand founded in 2004 that celebrates femininity and embodies a chic signature style with a Scandinavian touch. Renowned for its distinctive bohemian look, Cream captures a unique blend of timeless elegance and contemporary trends.<br/>
-<br/>During my internship at Uncle Grey, I took part in reshaping Cream’s identity. Formerly esteemed with a clear identity and widespread appeal, the mission was to revive its essence. My contribution was primarily focused on the early stages, where I was tasked with presenting a visually updated identity that included a new logo and simplified symbol. The aim was to evolve from the existing one, while still maintaining a fresh and classic vibe that could resonate with a younger audience.
 
-<div class="project-data-footer">
-Year: 2022
+Cream is a clothing brand founded in 2004 that celebrates femininity and embodies a
+chic signature style with a Scandinavian touch. Renowned for its distinctive bohemian
+look, Cream captures a unique blend of timeless elegance and contemporary trends.<br/>
 <br/>
-At: <a href="https://unclegrey.dk/" target="_blank">Uncle Grey DK</a>
-</div>
+During my internship at Uncle Grey, I took part in reshaping Cream’s identity. Formerly
+esteemed with a clear identity and widespread appeal, the mission was to revive its
+essence. My contribution was primarily focused on the early stages, where I took on art
+direction to present a visually updated identity, which included a new logo and simplified
+symbol. The aim was to evolve from the existing one, while still maintaining a fresh and
+classic vibe that could resonate with a younger audience.
 
+	<div class="project-data-footer">
 
-	  <!--<div class="row">
-	    <div class="col-lg-6">
-	      Cream 
-	    </div>
-	    <div class="col-lg-6">
-Visual Identity
-<br/>
-Uncle Grey DK
-<br/>
-2022
-	    </div>
-	    <div class="col-lg-12">
-<br/>
-<br/>
-Cream is a clothing brand founded in 2004 that celebrates femininity and embodies a chic signature style with a Scandinavian touch. Renowned for its distinctive bohemian look, Cream captures a unique blend of timeless elegance and contemporary trends.<br/>
-<br/>During my internship at Uncle Grey, I took part in reshaping Cream’s identity. Formerly esteemed with a clear identity and widespread appeal, the mission was to revive its essence. My contribution was primarily focused on the early stages, where I was tasked with presenting a visually updated identity that included a new logo and simplified symbol. The aim was to evolve from the existing one, while still maintaining a fresh and classic vibe that could resonate with a younger audience.
-
-             </div>
-	  </div>-->
-	</section>
-	<section class="showroom">
-	  <div class="row">
-	    <div class="col-lg-10">
-	      <img src="../IMAGES/PROJECTS/GRAPHIC DESIGN/CREAM (2022)/F8.gif">
+	  <div class="row" style="text-align:center;">
+	 <div class="col-lg-12">
+ 	 Developed at
+	 <a href="https://unclegrey.dk"
+target="_blank" class="grey">UNCLE GREY <sup>( DK )</sup></a>
 	    </div>
 	  </div>
-          <div class="row">
+	</div>
+
+	</section>
+
+	<section class="showroom">
+	  <div class="row">
 	    <div class="col-lg-10">
 	      <img src="../IMAGES/PROJECTS/GRAPHIC DESIGN/CREAM (2022)/F4.jpg">
 	    </div>
 	  </div>
           <div class="row">
 	    <div class="col-lg-10">
-	      <img src="../IMAGES/PROJECTS/GRAPHIC DESIGN/CREAM (2022)/011.jpg">
+	      <img src="../IMAGES/PROJECTS/GRAPHIC DESIGN/CREAM (2022)/F8.gif">
+	    </div>
+	  </div>
+          <div class="row">
+	    <div class="col-lg-10">
+	      <img src="../IMAGES/PROJECTS/GRAPHIC DESIGN/CREAM (2022)/013.jpg">
 	    </div>
 	  </div>
           <div class="row">
