--- a/HTML&CSS/Jojo.html
+++ b/HTML&CSS/Jojo.html
@@ -6,6 +6,7 @@
 
   </head>
   <body>
+
     <header>
       <div class="col-lg-4"> <a href="index.html">DD </a></div>
       <div class="col-lg-4"> 
@@ -15,40 +16,48 @@
     <main class="project">
       <div class="container-fluid project-content">
         <div class="project-image-container">
-          <img class="background-image-fadein" src="../IMAGES/PROJECTS/GRAPHIC DESIGN/CERNE (2024)/014.jpg"/>
+          <img class="background-image-fadein" src="../IMAGES/PROJECTS/GRAPHIC DESIGN/JOJO (2025)/1.jpg"/>
         </div>
 	<section class="project-description">
 	  <div class="row project-data">
-	    <div class="col-lg-4">Cerne Jewelry</div>
-	    <div class="col-lg-4">( Visual Identity & Naming )</div>
-	    <div class="col-lg-4">2024</div>
+	    <div class="col-lg-4">Jojo</div>
+	    <div class="col-lg-4">( Visual Identity )</div>
+	    <div class="col-lg-4">2024—2025</div>
 	  </div>
 	  <div class="row">
 	    <div class="col-lg-12">
-Cerne emerged from a collaboration between two friends, evolving from a hypothetical
-identity case into a fully realized independent brand. Developed through a strategic
-process, I designed the complete visual identity and led the brand strategy, shaping its
-positioning and playing a key role in defining its name.<br/><br/>
-Grounded in artisanal craftsmanship and sustainability, Cerne balances personality,
-playfulness, and audacity—redefining jewelry as more than an accessory, but as a
-signature piece. The final identity captures the bold, deliberately unfinished yet refined
-aesthetic of its jewels. Previously based in Copenhagen, Cerne is now entering a new
-phase as its founder, Margarida, establishes a studio space in Lisbon, preparing to
-launch the business in a new setting.
 
+JOJO, a popular bar in Vesterbro, Copenhagen, partnered with Spacon to create a
+completely new identity for its expansion into Nørrebro. As the brand grew, we developed
+a design that reflects the youthful, grounded vibe of Nørrebro, while maintaining a fluid
+connection with the Vesterbro location and celebrating their distinct atmospheres.
+<br/>
+<br/>
+The new, organically shaped logo I designed draws inspiration from JOJO’s freshly made
+in-house cocktails. Working alongside art director Melanie Njoh, we ensured the identity
+captured both the dynamic energy and soft, inviting nature of the brand. For the Nørrebro
+space, masterfully designed by architects Dorsa Ali Zadeh and Aleksander Aarstad, we
+integrated the visual identity into Miljøparken, creating a vibrant, cozy space centered
+around the prominent bar concept,
 
 	<div class="project-data-footer">
 
 	  <div class="row" style="text-align:center;">
-	    <div class="col-lg-12">
-  		  Academic project <br/>
-		  Jewelry by
-  	    <a href="https://www.instagram.com/magz_______/"
-	    target="_blank" class="grey">MARGARIDA COSTA<sup></a>
+	    <div class="col-lg-4">
+  		  Melanie Njoh <sup>( Art Direction )</sup><br/>
+  		  Diogo Dantas <sup>( Graphic Design )</sup>
+	    </div>
+	    <div class="col-lg-4">
+  		  Developed at<br/>
+	    <a href="https://spaconandx.com"
+	    target="_blank" class="grey">SPACON<sup></a>
+	    </div>
+	    <div class="col-lg-4">
+  		  Dorsa Ali Z., Aleksander Aarstad <sup>( Spatial Design )</sup><br/>
+  		  Svend Jacob Pedersen <sup>( Project Lead )</sup>
 	    </div>
 	  </div>
 	</div>
-
 
 	    </div>
 	  </div>
