--- a/HTML&CSS/Riot.html
+++ b/HTML&CSS/Riot.html
@@ -6,41 +6,43 @@
   </head>
   <body>
     <header>
-      <div class="logo"><a href="index.html">DIOGO DANTAS</a></div>
-      <nav>
-	<ul>
-	  <li>
-        <a href="Projects.html">Design</a>
-	  </li>
-	  <li>
-            <a href="Artwork.html">Artwork</a>
-	  </li>
-	  <li>
-            <a href="About.html">About</a>
-	  </li>
-	</ul>
-      </nav>
+      <div class="col-lg-4"> <a href="index.html">DD </a></div>
+      <div class="col-lg-4"> 
+	<a href="Work.html">WORK</a>/<a href="Archive.html">ARCHIVE</a></div>
+      <div class="col-lg-4"> <a href="About.html">ABOUT </a></div>
     </header>
     <main class="project">
-      <img class="background-image-fadein" src="../IMAGES/PROJECTS/GRAPHIC DESIGN/RIOT FEST (2022)/02.gif"/>
       <div class="container-fluid project-content">
+        <div class="project-image-container">
+          <img class="background-image-fadein" src="../IMAGES/PROJECTS/GRAPHIC DESIGN/RIOT FEST (2022)/09.jpg"/>
+        </div>
 	<section class="project-description">
-
+	  <div class="row project-data">
+	    <div class="col-lg-4">Riot Fest</div>
+	    <div class="col-lg-4">( Visual Identity & Communication )</div>
+	    <div class="col-lg-4">2022</div>
+	  </div>
 	  <div class="row">
-	    <div class="col-lg-12 project-data">
-	      <p style="float:left;">Riot Fest</p>
-	      <p style="float:right;">(Visual Identity & Communication)</p>
-	    </div>
 	    <div class="col-lg-12">
-Riot Fest is a groundbreaking, multi-genre festival designed to disrupt the ‘quiet’ with its diverse crowd and artist lineup. Set to unfold at Refshaleøen in Copenhagen, this open-air festival features a huge range of genres, going from R&B and Neo Soul to Hip Hop and AfroPop, creating an energetic and inclusive atmosphere.<br/>
-<br/>Conceived as a fictional three-day event, the goal with Riot Fest was to redefine the traditional festival experience, creating a loud and uncontrolled celebration of music and entertainment, reminiscent of a riot. By curating a lineup that reflects a spectrum of musical styles, the aim was to captivate and entertain a broad audience, with diversity, energy and extravagance at the heart of the Riot Fest experience.
-
-<div class="project-data-footer">
-Year: 2022
+Riot Fest is a groundbreaking, multigenre festival designed to disrupt the ‘quiet’ with its
+diverse crowd and artist lineup. Set to unfold at Refshaleøen in Copenhagen, this open-
+air festival features a huge range of genres, going from Neo Soul and R&B to Hip Hop
+and AfroPop, creating an energetic and inclusive atmosphere.<br/>
 <br/>
-Academic Project
-</div>
+Conceived as a fictional three-day event, Riot Fest was designed to redefine the
+traditional festival experience—transforming it into a loud and uncontrolled celebration
+of music and entertainment, reminiscent of a riot. By curating a lineup
+that reflects a spectrum of musical styles, the goal was to captivate a broad audience,
+where diversity, energy, and extravagance are at the heart of the Riot Fest experience.
 
+	<div class="project-data-footer">
+
+	  <div class="row" style="text-align:center;">
+	    <div class="col-lg-12">
+  		  Academic Project
+	    </div>
+	  </div>
+	</div>
 <!--
 	  <div class="row">
 	    <div class="col-lg-6">
@@ -65,6 +67,11 @@ Riot Fest is a groundbreaking, multi-genre festival designed to disrupt the ‘q
 	<section class="showroom">
 	  <div class="row">
 	    <div class="col-lg-10">
+	      <img src="../IMAGES/PROJECTS/GRAPHIC DESIGN/RIOT FEST (2022)/02.gif">
+	    </div>
+	  </div>
+          <div class="row">
+	    <div class="col-lg-10">
 	      <img src="../IMAGES/PROJECTS/GRAPHIC DESIGN/RIOT FEST (2022)/01.jpg">
 	    </div>
 	  </div>
@@ -72,7 +79,7 @@ Riot Fest is a groundbreaking, multi-genre festival designed to disrupt the ‘q
 	    <div class="col-lg-10">
 	      <img src="../IMAGES/PROJECTS/GRAPHIC DESIGN/RIOT FEST (2022)/06.jpg">
 	    </div>
-	  </div>
+          </div>
           <div class="row">
 	    <div class="col-lg-10">
 	      <img src="../IMAGES/PROJECTS/GRAPHIC DESIGN/RIOT FEST (2022)/05.jpg">
@@ -81,7 +88,7 @@ Riot Fest is a groundbreaking, multi-genre festival designed to disrupt the ‘q
           <div class="row">
 	    <div class="col-lg-10">
 	      <img src="../IMAGES/PROJECTS/GRAPHIC DESIGN/RIOT FEST (2022)/03.gif">
-	    </div>
+            </div>
           </div>
           <div class="row">
 	    <div class="col-lg-10">
@@ -91,11 +98,6 @@ Riot Fest is a groundbreaking, multi-genre festival designed to disrupt the ‘q
           <div class="row">
 	    <div class="col-lg-10">
 	      <img src="../IMAGES/PROJECTS/GRAPHIC DESIGN/RIOT FEST (2022)/08.jpg">
-            </div>
-          </div>
-          <div class="row">
-	    <div class="col-lg-10">
-	      <img src="../IMAGES/PROJECTS/GRAPHIC DESIGN/RIOT FEST (2022)/09.jpg">
 	    </div>
 	  </div>
       </div>
