--- a/HTML&CSS/About.html
+++ b/HTML&CSS/About.html
@@ -6,10 +6,20 @@
   </head>
   <body class="about">
     <header>
-      <div class="col-lg-4"> <a href="index.html">DD </a></div>
-      <div class="col-lg-4"> 
-	<a href="Work.html">WORK</a>/<a href="Archive.html">ARCHIVE</a></div>
-      <div class="col-lg-4"> <a href="About.html">ABOUT </a></div>
+      <div class="logo"><a href="index.html">DIOGO DANTAS</a></div>
+      <nav>
+	<ul>
+	  <li>
+           <a href="Projects.html">Design</a>
+	  </li>
+	  <li>
+            <a href="Artwork.html">Artwork</a>
+	  </li>
+	  <li>
+            <a href="About.html">About</a>
+	  </li>
+	</ul>
+      </nav>
     </header>
     <main>
       <div class="container-fluid">
@@ -17,7 +27,7 @@
         <section>
 	  <div class="row">
 	    <div class="col">
-             <img src="../IMAGES/Profile1.png"/>
+             <img src="../IMAGES/Profile.jpg"/>
 	    </div>
           </div>
         </section>
@@ -27,41 +37,32 @@
 	    <div class="col">
 	      <div class="about-text">
 	      
-        <div class="hover-title">I'm Diogo</div><div class="hover-image"> <img src="../IMAGES/Profile.png"/> </div>, a Communication Designer based in Copenhagen, specializing in visual identity, editorial design, and creative direction. Growing up in Lisbon's artistic scene and shaped by inclusive, creative spaces, I’ve developed a strong foundation in visual storytelling and a passion for socially driven projects.
-<br/>
-<br/>With a background in Design and Business, as well as studies in Furniture Design, my experience spans branding, editorial, and collaborative projects. Rooted in strategic thinking and research-driven design, while embracing disruption, my work balances intentional design with a critical approach, building purposeful identities and communication systems that connectboth aesthetically and conceptually.
-        </div>
-      </div>
-    </div>
+        <div class="hover-title">I'm Diogo</div><div class="hover-image"> <img src="../IMAGES/Profile.jpg"/> </div>, a Communication Designer  currently based inCopenhagen, with a keen eye for visualconcepts. Growing up in the artisticenvironment of Lisbon and shaped byschools and workplaces that promoteinclusivity and creativity, I have become amultifaceted person with strongcommunication skills, valuing diversity andholding a particular interest in social andcultural projects.<br/>
+<br/>With a background in Design and Business,and prior studies in Product Design, myinterests extend to other fields, includinginterior design and furniture restoration. My primary focus lies in editorial design andshaping visual identities, with a specialpassion for strategy, creative writing and research.
+<br/>
+<br/>
+You can reach out to
+<br/>
+<a href="mailto:diogo28dantas@gmail.com">diogo28dantas@gmail.com</a>
+<br/>
+<br/>
+	      </div>
+	    </div>
+          </div>
 	</section>
 
 	<section> <!--- Contacts & socials --->
-              <div class="row" style="line-height:122%;font-size:0.9rem;">
-                <div class="col-lg-2">
-                  <p class="about-socials-header">( Services )</p>
-                  Visual Identity<br/>
-                  Art Direction<br/>
-                  Creative Direction<br/>
-                  Editorial Design<br/>
-                  Layout & Print<br/>
-                  Strategy & Research<br/>
-                  Brand Activation<br/>
-                </div>
-
-                <div class="col-lg-2">
-                  <p class="about-socials-header">( Contact )</p>
-                  You can reach out to <br/> <a href="mailto:diogo28dantas@gmail.com">diogo28dantas@gmail.com</a><br/>
-                  <br/>
-                  ( +45 )   3132   7123<br/>
-                  <br/>
-	                <a href="https://www.linkedin.com/in/dantasdiogo" target="_blank">LinkedIn <span style="font-size:0.8rem;">&nearr;</span></a><br/>
-	                <a href="https://www.behance.net/diogo28dantas" target="_blank">B&#275;hance <span style="font-size:0.8rem;">&nearr;</span></a><br/>
-                </div>
-              </div>
-	</section>
+	  <div class="row">
+	    <div class="col-lg-4" style="line-height:1.3rem;">
+	      Copenhagen, Denmark <br/>
+	      (+45) 31 32 71 23
+	    </div>
+	    <div class="col-lg-4" style="line-height:1.3rem;">
+	      <a href="https://www.linkedin.com/in/dantasdiogo" target="_blank">↗ LinkedIn</a><br/>
+	      <a href="https://www.behance.net/diogo28dantas" target="_blank">↗ B&#275;hance</a>
+	    </div>
+	  </div>
+	</section
       </div>
     </main>
-    <footer style="font-size:0.8rem;width:100%;text-align:center;">
-      <div style="width:100%;text-align:center;">&copy; 2025</div>
-    </footer>
   </body>
