--- a/HTML&CSS/Cerne.html
+++ b/HTML&CSS/Cerne.html
@@ -6,49 +6,39 @@
 
   </head>
   <body>
-    <header>
-      <div class="col-lg-4"> <a href="index.html">DD </a></div>
-      <div class="col-lg-4"> 
-	<a href="Work.html">WORK</a>/<a href="Archive.html">ARCHIVE</a></div>
-      <div class="col-lg-4"> <a href="About.html">ABOUT </a></div>
+    <header style="color:white;">
+      <div class="logo"><a href="index.html">DIOGO DANTAS</a></div>
+      <nav>
+	<ul>
+	  <li>
+           <a href="Projects.html">Design</a>
+	  </li>
+	  <li>
+            <a href="Artwork.html">Artwork</a>
+	  </li>
+	  <li>
+            <a href="About.html">About</a>
+	  </li>
+	</ul>
+      </nav>
     </header>
     <main class="project">
+      <img class="background-image-fadein" src="../IMAGES/PROJECTS/GRAPHIC DESIGN/CERNE (2024)/014.jpg"/>
       <div class="container-fluid project-content">
-        <div class="project-image-container">
-          <img class="background-image-fadein" src="../IMAGES/PROJECTS/GRAPHIC DESIGN/CERNE (2024)/014.jpg"/>
-        </div>
 	<section class="project-description">
-	  <div class="row project-data">
-	    <div class="col-lg-4">Cerne Jewelry</div>
-	    <div class="col-lg-4">( Visual Identity & Naming )</div>
-	    <div class="col-lg-4">2024</div>
-	  </div>
 	  <div class="row">
-	    <div class="col-lg-12">
-Cerne emerged from a collaboration between two friends, evolving from a hypothetical
-identity case into a fully realized independent brand. Developed through a strategic
-process, I designed the complete visual identity and led the brand strategy, shaping its
-positioning and playing a key role in defining its name.<br/><br/>
-Grounded in artisanal craftsmanship and sustainability, Cerne balances personality,
-playfulness, and audacity—redefining jewelry as more than an accessory, but as a
-signature piece. The final identity captures the bold, deliberately unfinished yet refined
-aesthetic of its jewels. Previously based in Copenhagen, Cerne is now entering a new
-phase as its founder, Margarida, establishes a studio space in Lisbon, preparing to
-launch the business in a new setting.
-
-
-	<div class="project-data-footer">
-
-	  <div class="row" style="text-align:center;">
-	    <div class="col-lg-12">
-  		  Academic project <br/>
-		  Jewelry by
-  	    <a href="https://www.instagram.com/magz_______/"
-	    target="_blank" class="grey">MARGARIDA COSTA<sup></a>
+	    <div class="col-lg-12 project-data">
+	      <p style="float:left;">Cerne Jewellery</p>
+	      <p style="float:right;">(Visual Identity)</p>
 	    </div>
-	  </div>
-	</div>
+	    <div class="col-lg-12">
+Cerne emerged unexpectedly from a collaboration between two friends. Originally conceptualized as a hypothetical identity case, the project evolved into Margarida’s dream of starting her own jewellery business. The venture organically expanded, with a growing team working on shaping its identity and bringing the brand to life.<br/><br/>Positioned as an online business, Cerne embodies artisanal craftsmanship and a commitment to sustainability. With a distinctive blend of personality, playfulness, and audacity, it functions as an authorial and contemporary brand redefining the role of jewellery, elevating it from a mere accessory into a signature piece. The final identity encapsulates the bold and deliberately unfinished yet refined aesthetic of its jewels.
 
+<div class="project-data-footer">
+Year: 2024
+<br/>
+Academic Project
+</div>
 
 	    </div>
 	  </div>
