--- a/HTML&CSS/Extruplas.html
+++ b/HTML&CSS/Extruplas.html
@@ -5,42 +5,40 @@
     <link rel="stylesheet" media="all" href="Style.css">
   </head>
   <body>
-    <header>
-      <div class="col-lg-4"> <a href="index.html">DD </a></div>
-      <div class="col-lg-4"> 
-	<a href="Work.html">WORK</a>/<a href="Archive.html">ARCHIVE</a></div>
-      <div class="col-lg-4"> <a href="About.html">ABOUT </a></div>
+    <header style="color:white;">
+      <div class="logo"><a href="index.html">DIOGO DANTAS</a></div>
+      <nav>
+	<ul>
+	  <li>
+            <a href="Projects.html">Design</a>
+	  </li>
+	  <li>
+            <a href="Artwork.html">Artwork</a>
+	  </li>
+	  <li>
+            <a href="About.html">About</a>
+	  </li>
+	</ul>
+      </nav>
     </header>
     <main class="project">
+      <img class="background-image-fadein" src="../IMAGES/PROJECTS/GRAPHIC DESIGN/EXTRUPLAS (2020)/01.png"/>
       <div class="container-fluid project-content">
-        <div class="project-image-container">
-          <img class="background-image-fadein" src="../IMAGES/PROJECTS/GRAPHIC DESIGN/EXTRUPLAS (2020)/01.png"/>
-        </div>
 	<section class="project-description">
-	  <div class="row project-data">
-	    <div class="col-lg-4">Modular Bench </div>
-	    <div class="col-lg-4">( Furniture Design )</div>
-	    <div class="col-lg-4">2020</div>
-	  </div>
-	  <div class="row">
+<div class="row">
+	    <div class="col-lg-12 project-data">
+	      <p style="float:left;"> Extruplás </p>
+	      <p style="float:right;">(Industrial & Product Design)</p>
+	    </div>
 	    <div class="col-lg-12">
 Extruplás is a pioneering company addressing the disposal of mixed plastics in Portugal, redirecting them away from landfills. Specialized in recycling, collecting, and recovering plastic, the company transforms these materials into urban furniture made entirely from recycled plastic and avoiding consuming natural resources like wood.<br/><br/>Designed for a school’s patio, we had the pleasure to partner with Extruplás on a collaborative project to design benches using their recycled plastic materials. The goal was to create an innovative design with versatile functionality, considering the right angles for a comfortable backrest. The resulting solution is a modular bench with dual usability—either vertically or horizontally. Users can set it up as they wish. The bench incorporates 10 recycled strips, and the structural components are crafted from metal.
 
-	<div class="project-data-footer">
+<div class="project-data-footer">
+Year: 2020
+<br/>
+In Collaboration With: <a href="https://www.linkedin.com/in/clara-gomes-sprung-0b13b61bb/" target="_blank">Clara Sprung</a> & <a href="https://www.extruplas.com/en/" target="_blank">Extruplás</a>
+</div>
 
-	  <div class="row" style="text-align:center;">
-	      <div class="col-lg-6">
-  		  Collaboration with <br/>
-	    <a href="https://www.extruplas.com/en/"
-	    target="_blank" class="grey">EXTRUPLÁS<sup></a>
-	    </div>
-	    <div class="col-lg-6">
-  	    Together with <br/>
- 	    <a href="https://www.linkedin.com/in/clara-gomes-sprung-0b13b61bb/"
-	    target="_blank" class="grey">CLARA SPRUNG<sup></a>
-	    </div>
-	  </div>
-	</div>
 	    </div>
 	  </div>
 
