--- a/HTML&CSS/index.html
+++ b/HTML&CSS/index.html
@@ -1,311 +1,27 @@
 <html>
-
-<head>
-	<link rel="icon" type="image/x-icon" href="../IMAGES/thumbnail.png">
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-		integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-
-
-	<link rel="stylesheet" media="all" href="Style.css">
-	<style>
-		.frontpage-project {
-			position: absolute;
-			top:calc(50vh - 75px - 1.6rem);
-			left: calc(50vw - 120px);
-			width: 240px;
-			height: 150px;
-			animation-timing-function: linear;
-		}
-
-
-		.frontpage-project img {
-			position: relative;
-			width: 100%;
-		}
-
-		#one {
-			animation: orbit4 20s forwards infinite;
-			animation-timing-function: linear;
-			z-index: 1;
- 			filter:blur(9px);
-		}
-
-		#two {
-			animation: orbit4 20s forwards infinite;
-			animation-delay: -3.333s;
-			animation-timing-function: linear;
-			z-index: 11;
-		}
-
-		#three {
-			animation: orbit4 20s forwards infinite;
-			animation-delay: -6.666s;
-			animation-timing-function: linear;
-			z-index: 1;
-		}
-
-		#four {
-			animation: orbit4 20s forwards infinite;
-			animation-delay: -10s;
-			animation-timing-function: linear;
-			z-index: 11;
-		}
-
-		#five {
-			animation: orbit4 20s forwards infinite;
-			animation-delay: -13.333s;
-			animation-timing-function: linear;
-			z-index: 1;
-		}
-
-		#six {
-			animation: orbit4 20s forwards infinite;
-			animation-delay: -16.666s;
-			animation-timing-function: linear;
-			z-index: 11;
- 			filter:blur(9px);
-		}
-
-
-
-		@keyframes orbit4 {
-      0%      { transform: translate(30vw,calc(0vw + 1.6rem)); }
-      0.78%   { transform: translate(29.9vw,calc(1.1vw + 1.6rem)); }
-      1.56%   { transform: translate(29.7vw,calc(2.2vw + 1.6rem)); }
-      2.34%   { transform: translate(29.3vw,calc(3.3vw + 1.6rem)); }
-      3.13%   { transform: translate(28.8vw,calc(4.3vw + 1.6rem)); }
-      3.91%   { transform: translate(28.1vw,calc(5.2vw + 1.6rem)); }
-      4.69%   { transform: translate(27.4vw,calc(6.1vw + 1.6rem)); }
-      5.47%   { transform: translate(26.7vw,calc(6.9vw + 1.6rem)); }
-      6.25%   { transform: translate(25.8vw,calc(7.6vw + 1.6rem)); }
-      7.03%   { transform: translate(24.9vw,calc(8.3vw + 1.6rem)); }
-      7.81%   { transform: translate(24vw,calc(9vw + 1.6rem)); }
-      8.59%   { transform: translate(23vw,calc(9.6vw + 1.6rem)); }
-      9.38%   { transform: translate(22.1vw,calc(10.2vw + 1.6rem)); }
-      10.16%  { transform: translate(21vw,calc(10.7vw + 1.6rem)); }
-      10.94%  { transform: translate(20vw,calc(11.2vw + 1.6rem)); }
-      11.72%  { transform: translate(19vw,calc(11.6vw + 1.6rem)); }
-      12.5%   { transform: translate(17.9vw,calc(12vw + 1.6rem)); }
-      13.28%  { transform: translate(16.8vw,calc(12.4vw + 1.6rem)); }
-      14.06%  { transform: translate(15.8vw,calc(12.8vw + 1.6rem)); }
-      14.84%  { transform: translate(14.7vw,calc(13.1vw + 1.6rem)); }
-      15.63%  { transform: translate(13.6vw,calc(13.4vw + 1.6rem)); }
-      16.41%  { transform: translate(12.5vw,calc(13.6vw + 1.6rem)); }
-      17.19%  { transform: translate(11.3vw,calc(13.9vw + 1.6rem)); }
-      17.97%  { transform: translate(10.2vw,calc(14.1vw + 1.6rem)); }
-      18.75%  { transform: translate(9.1vw,calc(14.3vw + 1.6rem)); }
-      19.53%  { transform: translate(8vw,calc(14.5vw + 1.6rem)); }
-      20.31%  { transform: translate(6.8vw,calc(14.6vw + 1.6rem)); }
-      21.09%  { transform: translate(5.7vw,calc(14.7vw + 1.6rem)); }
-      21.88%  { transform: translate(4.6vw,calc(14.8vw + 1.6rem)); }
-      22.66%  { transform: translate(3.4vw,calc(14.9vw + 1.6rem)); }
-      23.44%  { transform: translate(2.3vw,calc(15vw + 1.6rem)); }
-      24.22%  { transform: translate(1.1vw,calc(15vw + 1.6rem)); }
-      25%     { transform: translate(0vw,calc(15vw + 1.6rem)); }
-      25.78%  { transform: translate(-1.1vw,calc(15vw + 1.6rem)); }
-      26.56%  { transform: translate(-2.3vw,calc(15vw + 1.6rem)); }
-      27.34%  { transform: translate(-3.4vw,calc(14.9vw + 1.6rem)); }
-      28.13%  { transform: translate(-4.6vw,calc(14.8vw + 1.6rem)); }
-      28.91%  { transform: translate(-5.7vw,calc(14.7vw + 1.6rem)); }
-      29.69%  { transform: translate(-6.8vw,calc(14.6vw + 1.6rem)); }
-      30.47%  { transform: translate(-8vw,calc(14.5vw + 1.6rem)); }
-      31.25%  { transform: translate(-9.1vw,calc(14.3vw + 1.6rem)); }
-      32.03%  { transform: translate(-10.2vw,calc(14.1vw + 1.6rem)); }
-      32.81%  { transform: translate(-11.3vw,calc(13.9vw + 1.6rem)); }
-      33.59%  { transform: translate(-12.5vw,calc(13.6vw + 1.6rem)); }
-      34.38%  { transform: translate(-13.6vw,calc(13.4vw + 1.6rem)); }
-      35.16%  { transform: translate(-14.7vw,calc(13.1vw + 1.6rem)); }
-      35.94%  { transform: translate(-15.8vw,calc(12.8vw + 1.6rem)); }
-      36.72%  { transform: translate(-16.8vw,calc(12.4vw + 1.6rem)); }
-      37.5%   { transform: translate(-17.9vw,calc(12vw + 1.6rem)); }
-      38.28%  { transform: translate(-19vw,calc(11.6vw + 1.6rem)); }
-      39.06%  { transform: translate(-20vw,calc(11.2vw + 1.6rem)); }
-      39.84%  { transform: translate(-21.1vw,calc(10.7vw + 1.6rem)); }
-      40.63%  { transform: translate(-22.1vw,calc(10.2vw + 1.6rem)); }
-      41.41%  { transform: translate(-23vw,calc(9.6vw + 1.6rem)); }
-      42.19%  { transform: translate(-24vw,calc(9vw + 1.6rem)); }
-      42.97%  { transform: translate(-24.9vw,calc(8.3vw + 1.6rem)); }
-      43.75%  { transform: translate(-25.8vw,calc(7.6vw + 1.6rem)); }
-      44.53%  { transform: translate(-26.7vw,calc(6.9vw + 1.6rem)); }
-      45.31%  { transform: translate(-27.4vw,calc(6.1vw + 1.6rem)); }
-      46.09%  { transform: translate(-28.1vw,calc(5.2vw + 1.6rem)); }
-      46.88%  { transform: translate(-28.8vw,calc(4.3vw + 1.6rem)); }
-      47.66%  { transform: translate(-29.3vw,calc(3.3vw + 1.6rem)); }
-      48.44%  { transform: translate(-29.7vw,calc(2.2vw + 1.6rem)); }
-      49.22%  { transform: translate(-29.9vw,calc(1.1vw + 1.6rem)); }
-      50%     { transform: translate(-30vw,calc(-0vw + 1.6rem)); }
-      50.78%  { transform: translate(-29.9vw,calc(-1.1vw + 1.6rem)); }
-      51.56%  { transform: translate(-29.7vw,calc(-2.2vw + 1.6rem)); }
-      52.34%  { transform: translate(-29.3vw,calc(-3.3vw + 1.6rem)); }
-      53.13%  { transform: translate(-28.8vw,calc(-4.3vw + 1.6rem)); }
-      53.91%  { transform: translate(-28.1vw,calc(-5.2vw + 1.6rem)); }
-      54.69%  { transform: translate(-27.4vw,calc(-6.1vw + 1.6rem)); }
-      55.47%  { transform: translate(-26.7vw,calc(-6.9vw + 1.6rem)); }
-      56.25%  { transform: translate(-25.8vw,calc(-7.6vw + 1.6rem)); }
-      57.03%  { transform: translate(-24.9vw,calc(-8.3vw + 1.6rem)); }
-      57.81%  { transform: translate(-24vw,calc(-9vw + 1.6rem)); }
-      58.59%  { transform: translate(-23vw,calc(-9.6vw + 1.6rem)); }
-      59.38%  { transform: translate(-22.1vw,calc(-10.2vw + 1.6rem)); }
-      60.16%  { transform: translate(-21vw,calc(-10.7vw + 1.6rem)); }
-      60.94%  { transform: translate(-20vw,calc(-11.2vw + 1.6rem)); }
-      61.72%  { transform: translate(-19vw,calc(-11.6vw + 1.6rem)); }
-      62.5%   { transform: translate(-17.9vw,calc(-12vw + 1.6rem)); }
-      63.28%  { transform: translate(-16.8vw,calc(-12.4vw + 1.6rem)); }
-      64.06%  { transform: translate(-15.8vw,calc(-12.8vw + 1.6rem)); }
-      64.84%  { transform: translate(-14.7vw,calc(-13.1vw + 1.6rem)); }
-      65.63%  { transform: translate(-13.6vw,calc(-13.4vw + 1.6rem)); }
-      66.41%  { transform: translate(-12.5vw,calc(-13.6vw + 1.6rem)); }
-      67.19%  { transform: translate(-11.3vw,calc(-13.9vw + 1.6rem)); }
-      67.97%  { transform: translate(-10.2vw,calc(-14.1vw + 1.6rem)); }
-      68.75%  { transform: translate(-9.1vw,calc(-14.3vw + 1.6rem)); }
-      69.53%  { transform: translate(-8vw,calc(-14.5vw + 1.6rem)); }
-      70.31%  { transform: translate(-6.8vw,calc(-14.6vw + 1.6rem)); }
-      71.09%  { transform: translate(-5.7vw,calc(-14.7vw + 1.6rem)); }
-      71.88%  { transform: translate(-4.6vw,calc(-14.8vw + 1.6rem)); }
-      72.66%  { transform: translate(-3.4vw,calc(-14.9vw + 1.6rem)); }
-      73.44%  { transform: translate(-2.3vw,calc(-15vw + 1.6rem)); }
-      74.22%  { transform: translate(-1.1vw,calc(-15vw + 1.6rem)); }
-      75%     { transform: translate(0vw,calc(-15vw + 1.6rem)); }
-      75.78%  { transform: translate(1.1vw,calc(-15vw + 1.6rem)); }
-      76.56%  { transform: translate(2.3vw,calc(-15vw + 1.6rem)); }
-      77.34%  { transform: translate(3.4vw,calc(-14.9vw + 1.6rem)); }
-      78.13%  { transform: translate(4.6vw,calc(-14.8vw + 1.6rem)); }
-      78.91%  { transform: translate(5.7vw,calc(-14.7vw + 1.6rem)); }
-      79.69%  { transform: translate(6.8vw,calc(-14.6vw + 1.6rem)); }
-      80.47%  { transform: translate(8vw,calc(-14.5vw + 1.6rem)); }
-      81.25%  { transform: translate(9.1vw,calc(-14.3vw + 1.6rem)); }
-      82.03%  { transform: translate(10.2vw,calc(-14.1vw + 1.6rem)); }
-      82.81%  { transform: translate(11.3vw,calc(-13.9vw + 1.6rem)); }
-      83.59%  { transform: translate(12.5vw,calc(-13.6vw + 1.6rem)); }
-      84.38%  { transform: translate(13.6vw,calc(-13.4vw + 1.6rem)); }
-      85.16%  { transform: translate(14.7vw,calc(-13.1vw + 1.6rem)); }
-      85.94%  { transform: translate(15.8vw,calc(-12.8vw + 1.6rem)); }
-      86.72%  { transform: translate(16.8vw,calc(-12.4vw + 1.6rem)); }
-      87.5%   { transform: translate(17.9vw,calc(-12vw + 1.6rem)); }
-      88.28%  { transform: translate(19vw,calc(-11.6vw + 1.6rem)); }
-      89.06%  { transform: translate(20vw,calc(-11.2vw + 1.6rem)); }
-      89.84%  { transform: translate(21.1vw,calc(-10.7vw + 1.6rem)); }
-      90.63%  { transform: translate(22.1vw,calc(-10.2vw + 1.6rem)); }
-      91.41%  { transform: translate(23vw,calc(-9.6vw + 1.6rem)); }
-      92.19%  { transform: translate(24vw,calc(-9vw + 1.6rem)); }
-      92.97%  { transform: translate(24.9vw,calc(-8.3vw + 1.6rem)); }
-      93.75%  { transform: translate(25.8vw,calc(-7.6vw + 1.6rem)); }
-      94.53%  { transform: translate(26.7vw,calc(-6.9vw + 1.6rem)); }
-      95.31%  { transform: translate(27.4vw,calc(-6.1vw + 1.6rem)); }
-      96.09%  { transform: translate(28.1vw,calc(-5.2vw + 1.6rem)); }
-      96.88%  { transform: translate(28.8vw,calc(-4.3vw + 1.6rem)); }
-      97.66%  { transform: translate(29.3vw,calc(-3.3vw + 1.6rem)); }
-      98.44%  { transform: translate(29.7vw,calc(-2.2vw + 1.6rem)); }
-      99.22%  { transform: translate(29.9vw,calc(-1.1vw + 1.6rem)); }
-      100%    { transform: translate(30vw,calc(0vw + 1.6rem)); }
-		}
-
-		@-webkit-keyframes orbit2 {
-			0% {
-				-webkit-transform: rotate(0deg) translateX(150px) translateY(100px) rotate(0deg);
-			}
-
-			25% {
-				-webkit-transform: rotate(90deg) translateX(150px) translateY(100px) rotate(-90deg);
-			}
-
-			50% {
-				-webkit-transform: rotate(180deg) translateX(150px) translateY(100px) rotate(-180deg);
-			}
-
-			75% {
-				-webkit-transform: rotate(270deg) translateX(150px) translateY(100px) rotate(-270deg);
-			}
-
-			100% {
-				-webkit-transform: rotate(360deg) translateX(150px) translateY(100px) rotate(-360deg);
-			}
-		}
-
-		.frontpage-name {
-			Font-size: 21rem;
-			text-align: center;
-			z-index: 10;
-      position:absolute;
-      top:calc(50vh - 21rem + 1.6rem);
-		}
-
-		.background-dark {
-			background-color: #cac9cf;
-			-webkit-transition: background-color 1000ms linear;
-			-ms-transition: background-color 1000ms linear;
-			transition: background-color 1000ms linear;
-		}
-
-		.background-light {
-			background-color: #ffffff;
-			-webkit-transition: background-color 1000ms linear;
-			-ms-transition: background-color 1000ms linear;
-			transition: background-color 1000ms linear;
-		}
-
-		a:hover {
-			text-decoration: none;
-		}
-	</style>
-</head>
-
-<body class="home">
-	<script>
-
-		function swap_grayscale() {
-			var checkBox = document.getElementById("colorbox");
-			let flag = !checkBox.checked;
-			if (flag) {
-				document.querySelectorAll('img').forEach(el => el.style.webkitFilter = 'grayscale(1)');
-				/*	  document.body.style.backgroundColor='#cac9cf';*/
-				$("body").addClass("background-dark");
-				$("body").removeClass("background-light");
-			} else {
-				document.querySelectorAll('img').forEach(el => el.style.webkitFilter = 'grayscale(0)');
-				$("body").addClass("background-light");
-				$("body").removeClass("background-dark");
-			}
-		}
-	</script>
-
-	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-		integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-		crossorigin="anonymous"></script>
-	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-		integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-		crossorigin="anonymous"></script>
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-		integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-		crossorigin="anonymous"></script>
-	<header>
-		<div class="col-lg-4"> <a href="index.html">DD </a></div>
-		<div class="col-lg-4">
-			<a href="Work.html">WORK</a>/<a href="Archive.html">ARCHIVE</a>
-		</div>
-		<div class="col-lg-4"> <a href="About.html">ABOUT </a></div>
-	</header>
-	<main>
-		<div class="frontpage-project" id="one">
-			<img src="../IMAGES/PROJECTS/GRAPHIC DESIGN/CERNE (2024)/01.jpg" />
-		</div>
-		<div class="frontpage-project" id="two">
-			<img src="../IMAGES/PROJECTS/GRAPHIC DESIGN/RIOT FEST (2022)/09.jpg" />
-		</div>
-		<div class="frontpage-project" id="three">
-			<img src="../IMAGES/PROJECTS/GRAPHIC DESIGN/EXTRUPLAS (2020)/01.png" />
-		</div>
-		<div class="frontpage-project" id="four">
-			<img src="../IMAGES/PROJECTS/GRAPHIC DESIGN/FMP (2024)/1.jpg" />
-		</div>
-		<div class="frontpage-project" id="five">
-			<img src="../IMAGES/PROJECTS/GRAPHIC DESIGN/CREAM (2022)/011.jpg" />
-		</div>
-		<div class="frontpage-project" id="six">
-			<img src="../IMAGES/PROJECTS/GRAPHIC DESIGN/TCWIP (2024)/1.jpg" />
-		</div>
-		<div class="frontpage-name" id="frontpage-name" style="line-height:100%;">
-          DIOGO<br />DANTAS
-		</div>
-	</main>
-</body>
+  <head>
+    <link rel="icon" type="image/x-icon" href="../IMAGES/thumbnail.png">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.0/css/bootstrap-grid.min.css" integrity="sha512-vWtGaoxGWtwzJnP6e3YbBCE2BAEbldcuL4TVO3IbW/IFocN/XxuBv3Fuqm7t+I4eZ7p8L9iBElSUqXQUbQmarA==" crossorigin="anonymous" referrerpolicy="no-referrer">
+    <link rel="stylesheet" media="all" href="Style.css">
+  </head>
+  <body class="home">
+    <header>
+      <div class="logo"><a href="index.html">DIOGO DANTAS</a></div>
+      <nav>
+	<ul>
+ 	  <li>
+            <a href="Projects.html">Design</a>
+	  </li>
+	  <li>
+            <a href="Artwork.html">Artwork</a>
+	  </li>
+	  <li>
+            <a href="About.html">About</a>
+	  </li>
+	</ul>
+      </nav>
+    </header>
+    <main>
+      <img src="../IMAGES/landing-page.gif" class="home-image"/>
+    </main>
+  </body>
