Header changes mostly

--- a/HTML&CSS/About.html
+++ b/HTML&CSS/About.html
@@ -1,15 +1,14 @@
 <html>
   <head>
     <link rel="icon" type="image/x-icon" href="../IMAGES/thumbnail.png">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.0/css/bootstrap-grid.min.css" integrity="sha512-vWtGaoxGWtwzJnP6e3YbBCE2BAEbldcuL4TVO3IbW/IFocN/XxuBv3Fuqm7t+I4eZ7p8L9iBElSUqXQUbQmarA==" crossorigin="anonymous" referrerpolicy="no-referrer">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" media="all" href="Style.css">
   </head>
   <body class="about">
     <header>
-      <div class="col-lg-4"> <a href="index.html">DD </a></div>
-      <div class="col-lg-4"> 
-	<a href="Work.html">WORK</a>/<a href="Archive.html">ARCHIVE</a></div>
-      <div class="col-lg-4"> <a href="About.html">ABOUT </a></div>
+      <div><a href="index.html">DD </a></div>
+      <div><a href="Work.html">WORK</a>/<a href="Archive.html">ARCHIVE</a></div>
+      <div><a href="About.html">ABOUT </a></div>
     </header>
     <main>
       <div class="container-fluid">
