--- a/HTML&CSS/Archive.html
+++ b/HTML&CSS/Archive.html
@@ -17,10 +17,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
     <header>
-      <div class="col-lg-4"> <a href="index.html">DD </a></div>
-      <div class="col-lg-4"> 
-	<a href="Work.html">WORK</a>/<a href="Archive.html">ARCHIVE</a></div>
-      <div class="col-lg-4"> <a href="About.html">ABOUT </a></div>
+      <div><a href="index.html">DD </a></div>
+      <div><a href="Work.html">WORK</a>/<a href="Archive.html">ARCHIVE</a></div>
+      <div><a href="About.html">ABOUT </a></div>
     </header>
     <main>
 
