--- a/HTML&CSS/Work.html
+++ b/HTML&CSS/Work.html
@@ -99,6 +99,10 @@
     a:hover {
       text-decoration:none;
     }
+    #main-link:hover {
+      Filter:none;
+      -webkit-filter:none;
+    }
     </style>
   </head>
   <body class="projects" onload="changeImage(5, false)" style="position:relative;">
@@ -106,10 +110,9 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <header>
-      <div class="col-lg-4"> <a href="index.html">DD </a></div>
-      <div class="col-lg-4"> 
-	<a href="Work.html">WORK</a>/<a href="Archive.html">ARCHIVE</a></div>
-      <div class="col-lg-4"> <a href="About.html">ABOUT </a></div>
+      <div><a href="index.html">DD </a></div>
+      <div><a href="Work.html">WORK</a>/<a href="Archive.html">ARCHIVE</a></div>
+      <div><a href="About.html">ABOUT </a></div>
     </header>
               <div style="width:50%;position:absolute;top:calc(50% - 15.625vw - 2rem);left:25%;" id="card">
                 <ul class="just">
@@ -125,7 +128,7 @@
                 </ul>
               </div>
               <div class="main-img-slide" style="width:50%;height:31.25vw;position:absolute;top:calc(50% - 15.625vw); left:25%;">
-                <a href="Foraeldre.html" id="main-link" style="filter:none;"><img src="terrain.png" style="width:100%;" id="main-img" onmouseover="changeImage(cur_img, true)" onmouseleave="changeImage(cur_img, false)"/></a>
+                <a href="Foraeldre.html" id="main-link" class="main-link" style="filter:none;-webkit-filter:none;"><img src="terrain.png" style="width:100%;" id="main-img" onmouseover="changeImage(cur_img, true)" onmouseleave="changeImage(cur_img, false)"/></a>
               </div>
 
             </div>
@@ -213,13 +216,13 @@
             if(!active[n]) {
               $("#main-link").css("pointer-events", "none");
 	      if(n == 6) {
-		$("#main-link").css("filter", "blur(9px)");
+		$("#main-link").css({"filter": "blur(9px)", "-webkit-filter" : "blur(9px)"});
 	      } else {
-                $("#main-link").css("filter", "blur(4px)");
+		$("#main-link").css({"filter": "blur(4px)", "-webkit-filter" : "blur(4px)"});
 	      }
             } else {
               $("#main-link").css("pointer-events", "auto");
-              $("#main-link").css("filter", "none");
+	      $("#main-link").css({"filter": "", "-webkit-filter" : ""});
             }
           }
           </script>
