--- a/HTML&CSS/index.html
+++ b/HTML&CSS/index.html
@@ -2,8 +2,7 @@
 
 <head>
 	<link rel="icon" type="image/x-icon" href="../IMAGES/thumbnail.png">
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-		integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
 
 	<link rel="stylesheet" media="all" href="Style.css">
@@ -279,11 +278,9 @@
 		integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
 		crossorigin="anonymous"></script>
 	<header>
-		<div class="col-lg-4"> <a href="index.html">DD </a></div>
-		<div class="col-lg-4">
-			<a href="Work.html">WORK</a>/<a href="Archive.html">ARCHIVE</a>
-		</div>
-		<div class="col-lg-4"> <a href="About.html">ABOUT </a></div>
+      <div><a href="index.html">DD </a></div>
+      <div><a href="Work.html">WORK</a>/<a href="Archive.html">ARCHIVE</a></div>
+      <div><a href="About.html">ABOUT </a></div>
 	</header>
 	<main>
 		<div class="frontpage-project" id="one">
