Updated work and style to fix blur

--- a/HTML&CSS/Work.html
+++ b/HTML&CSS/Work.html
@@ -128,7 +128,7 @@
                 </ul>
               </div>
               <div class="main-img-slide" style="width:50%;height:31.25vw;position:absolute;top:calc(50% - 15.625vw); left:25%;">
-                <a href="Foraeldre.html" id="main-link" class="main-link" style="filter:none;-webkit-filter:none;"><img src="terrain.png" style="width:100%;" id="main-img" onmouseover="changeImage(cur_img, true)" onmouseleave="changeImage(cur_img, false)"/></a>
+                <a href="Foraeldre.html" id="main-link" class="main-link" style="filter:none;-webkit-filter:none;will-change: filter;"><img src="terrain.png" style="width:100%;" id="main-img" onmouseover="changeImage(cur_img, true)" onmouseleave="changeImage(cur_img, false)"/></a>
               </div>
 
             </div>
