Fix about links

--- a/HTML&CSS/About.html
+++ b/HTML&CSS/About.html
@@ -3,6 +3,11 @@
     <link rel="icon" type="image/x-icon" href="../IMAGES/thumbnail.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" media="all" href="Style.css">
+    <style>
+      .contact-link:hover {
+      	color:black;
+      }
+    </style>
   </head>
   <body class="about">
     <header>
@@ -49,12 +54,12 @@
 
                 <div class="col-lg-2">
                   <p class="about-socials-header">( Contact )</p>
-                  You can reach out to <br/> <a href="mailto:diogo28dantas@gmail.com">diogo28dantas@gmail.com</a><br/>
+                  You can reach out to <br/> <a href="mailto:diogo28dantas@gmail.com" class="contact-link">diogo28dantas@gmail.com</a><br/>
                   <br/>
                   ( +45 )   3132   7123<br/>
                   <br/>
-	                <a href="https://www.linkedin.com/in/dantasdiogo" target="_blank">LinkedIn <span style="font-size:0.8rem;">&nearr;</span></a><br/>
-	                <a href="https://www.behance.net/diogo28dantas" target="_blank">B&#275;hance <span style="font-size:0.8rem;">&nearr;</span></a><br/>
+	                <a href="https://www.linkedin.com/in/dantasdiogo" target="_blank" class="contact-link">LinkedIn <span style="font-size:0.8rem;">&nearr;</span></a><br/>
+	                <a href="https://www.behance.net/diogo28dantas" target="_blank" class="contact-link">B&#275;hance <span style="font-size:0.8rem;">&nearr;</span></a><br/>
                 </div>
               </div>
 	</section>
